@@ -1,3 +1,7 @@
+2012-01-16  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
+
+	* usercolor.py: Added support for user colors.
+
 2012-01-10  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
 
 	* gfeedline.glade: Added Notebook UI.
